fix(staking): add flex gap between selected pools

--- a/packages/staking/src/features/browse-pools/stake-pools-table/StakePoolTableBrowser/StakePoolTableBrowser.module.scss
+++ b/packages/staking/src/features/browse-pools/stake-pools-table/StakePoolTableBrowser/StakePoolTableBrowser.module.scss
@@ -48,6 +48,7 @@
   .selectedPools {
     display: flex;
     flex-direction: column;
+    gap: size_unit(1);
   }
   .poolsSeparator {
     border-bottom: 1px solid var(--light-mode-light-grey-plus-56, var(--dark-mode-dark-grey));
